--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ControleDeGastos">
-        <activity android:name=".activities.LogedInActivity"></activity>
+        <activity android:name=".activities.CadastroDespesaActivity"></activity>
+        <activity android:name=".activities.LogedInActivity" />
         <activity android:name=".activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
